--- a/pages/home/home.wxss
+++ b/pages/home/home.wxss
@@ -1,1 +1,3 @@
-@import '../../components/button/button.wxss'
+@import '../../components/button/button.wxss';
+@import '../../components/clock/clock.wxss';
+@import '../../components/confirm/confirm.wxss';
